[workspace]
members = [ 
	"packages/cli", 
	"packages/core",
	"packages/js-bindings"

]

[workspace.dependencies]
bpm_core = { version = "0.1.0", path = "packages/core" }
cargo-tarpaulin = { version = "0.31.2" }
env_logger = "0.11.5"
log = "0.4.22"


[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
